New config option `testbuildonly`
When this option is specified, all targets with a name matching
`*_test` only get their dependencies built, but are not linked.

This is intended to validate source code validity for tests without
incurring the cost of linking.

This patch uses a new option (as opposed to overloading `linkmode`)
because it needs to affect only the `_test` targets; not all targets.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -135,6 +135,7 @@ go_config(
         "//go/private:is_strip_sometimes_fastbuild": True,
         "//conditions:default": False,
     }),
+    testbuildonly = "//go/config:testbuildonly",
     visibility = ["//visibility:public"],
 )
 
